--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,6 +9,7 @@ website:
       - href: tipologi_wilayah_sumsel.qmd
         text: Home
       - tipologi_wilayah_banyuasin.qmd
+      - tipologi_wilayah_sumsel.qmd
 
 format:
   html:
